--- a/css/snx.css
+++ b/css/snx.css
@@ -9,7 +9,7 @@ html {
     }
 
 .bgimg {
-    background-image: url('https://icecube-us-842.icedrive.io/download?p=3wS23w_NCM_IwD.tfeEf5YbEwkrMFCLc7qFY9jTVUhj.IvJDNRUIYSQO.aBV8K_1HnZiiAGiA.9HKQtZS7Pu2zpK_CcOhtQScYQ7JzqqyabAgDUT3maJX3YK.Ix4RJN_H3A3L7H2bHM4thziiwx.Mtuqdq9_k4S7Lk_S0ccD7llyXDGK6Uh8tuBnFQfs1_Fj');
+    background-image: url('https://icecube-us-844.icedrive.io/thumbnail?p=N17lI_FAAbKr5I6I842mOWCRvFKOTS8mwnBCv9lqTgskpTLuDEgg6uIvBC.aO53p.1FhhVOLEx7yxc.lvzcefmJjIueBzPUfljoMuTeVKtLgvTAHvNnEiQj9Tev8ouoq&w=1024&h=1024&m=cropped');
     min-height: 100%;
     background-position: center;
     background-size: cover;
