--- a/css/snx.css
+++ b/css/snx.css
@@ -1,6 +1,7 @@
 body,
 h1 {
-    font-family: "Raleway", sans-serif
+    font-family: "Raleway", sans-serif;
+  
 }
 
 body,
@@ -18,7 +19,85 @@ html {
 a,
 u {
     text-decoration: none;
+    transition: color 0.1s;
     }
 
+a:hover {
+    color: #8570a5;
+    }
+
+    button {
+        display: inline-block;
+        margin: 5px;
+        cursor: pointer;
+        font-size: 100%;
+        background-color: #b6b6c7;
+        border-radius: 5px;
+        padding: 2px 10px;
+        color: black;
+        border: 0;
+        transition: background-color 0.1s;
+      }
+      
+      button:hover {
+        background-color: #8570a5;
+      }
 
 
+      .choices button {
+        display: block;
+      }
+      
+      input[type="text"] {
+        font-size: 100%;
+      }
+      
+      ol {
+        padding-left: 0px;
+        max-height: 400px;
+        overflow: auto;
+      }
+      
+      li {
+        padding: 5px;
+        list-style: decimal inside none;
+      }
+      
+      li:nth-child(odd) {
+        background-color: #f3edfc;
+      }
+      
+      .wrapper {
+        margin: 100px auto 0 auto;
+        max-width: 600px;
+      }
+      
+      .hide {
+        display: none;
+      }
+      
+      .start {
+        text-align: center;
+      }
+      
+      .scores {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
+      
+      .feedback {
+        font-style: italic;
+        font-size: 120%;
+        margin-top: 20px;
+        padding-top: 10px;
+        color: gray;
+        border-top: 2px solid #ccc;
+      }
+      
+      .timer {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+      
